	  support/regression/ports/ucz80-nmos/spec.mk,
	  support/regression/ports/ucz80-resiy/spec.mk,
	  support/regression/ports/ucz80n/spec.mk:
	  Do not use --profile in regression testing, since it conflicts with register arguments.
	* device/lib/z180/mul.s,
	  device/lib/z180/mulchar.s:
	  Fix z180 multiplication support routines for new calling convention.

2021-07-28 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z180/abs.s,
	  device/lib/z180/divmixed.s,
	  device/lib/z180/divsigned.s,
	  device/lib/z180/divunsigned.s,
	  device/lib/z180/modmixed.s,
	  device/lib/z180/modsigned.s,
	  device/lib/z180/modunsigned.s,
	  device/lib/z180/mulchar.s,
	  device/lib/z180/setjmp.s,
	  device/lib/z180/strcpy.s,
	  device/lib/z180/strlen.s,
	  device/lib/z80/divmixed.s,
	  device/lib/z80/modmixed.s,
	  device/lib/z80/mulchar.s,
	  device/lib/z80n/abs.s,
	  device/lib/z80n/divmixed.s,
	  device/lib/z80n/divsigned.s,
	  device/lib/z80n/divunsigned.s,
	  device/lib/z80n/modmixed.s,
	  device/lib/z80n/modsigned.s,
	  device/lib/z80n/modunsigned.s,
	  device/lib/z80n/mul.s,
	  device/lib/z80n/mulchar.s,
	  device/lib/z80n/setjmp.s,
	  device/lib/z80n/strcpy.s,
	  device/lib/z80n/strlen.s,
	  device/lib/z180/atomic_flag_test_and_set.s,
	  device/lib/z180/memmove.s,
	  device/lib/z80n/atomic_flag_test_and_set.s,
	  device/lib/z80n/memmove.s:
	  Fix z180, z80n library functions for new calling convention.

2021/07/28 Visenri

    * sim/ucsim/pdk.src/inst.cc
    Fix bug in pdk15 simulation (introduced in [r12557]).
    
2021/07/28 Visenri

    * support/regression/compact-results.py
      Fix parsing of test name.

2021-07-27 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/abs.s,
	  device/lib/z80/divsigned.s,
	  device/lib/z80/divunsigned.s,
	  device/lib/z80/modsigned.s,
	  device/lib/z80/modunsigned.s,
	  doc/sdccman.lyx,
	  src/z80/gen.c
	  device/lib/z80/strcpy.s,
	  device/lib/z80/strlen.s,
	  device/lib/z80/atomic_flag_test_and_set.s,
	  device/lib/z80/mul.s,